# firstpass

./: .dockerignore  .env.example  .gitignore  Containerfile  IDEA.md  Makefile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml
firstpass/: __init__.py  config.py  framework.py  jira_client.py  release_controller.py  report.py
firstpass/phases/: __init__.py  base.py  phase1.py  phase2.py
tests/: __init__.py  conftest.py  test_config.py  test_dry_run.py  test_framework.py  test_jira_client.py
